--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "shared/header" %>
+    <div class="container p-3">
+      <%= yield %>
+    </div>
+    <%= render "shared/footer" %>
   </body>
 </html>
